# FriendlyClearMap-scripts

./: .gitattributes  LICENSE.txt  README.md
CM1_docker/: 01_preprocess_process_Ilastik_run_this.py  02_process_Ilastik_run_this.py
CM2_docker/: process_Ilastik_run_this.py  run these commands.txt
Young_Mouse_Atlas_Alignments/: 2021_preprocess_for_brainrender_v09_density_P50_WT_averages.py  2021_preprocess_for_brainrender_v09_density_averages.py  Align_all_to_CCF3_v02  Transform_Clearmap_v01.py
cortical_flatmaps/: PV_P14_WT.nrrd  PV_P56_WT.nrrd  SST_P28_WT.nrrd  VIP_P28_WT.nrrd  average_template_10.nrrd  avg_layer_depths.json  back.h5  back.nrrd  bottom.h5  bottom.nrrd  closest_surface_voxel_lookup.h5  cortical_layers_10_v2.h5  dorsal_flatmap_paths_100.h5  flatmap_butterfly.h5  flatmap_butterfly.nrrd  flatmap_dorsal.h5  flatmap_dorsal.nrrd  (+15 more)
cortical_flatmaps/ccf_streamlines-main/: .bumpversion.cfg  .gitignore  .readthedocs.yaml  LICENSE  README.md  data_file_info.md  setup.cfg
cortical_flatmaps/ccf_streamlines-main/ccf_streamlines/: angle.py  coordinates.py  dataset.py  linestring3d.py  metrics.py  morphology.py  processing.py  projection.py
cortical_flatmaps/ccf_streamlines-main/docs/: requirements.txt
cortical_flatmaps/ccf_streamlines-main/docs/source/: conf.py  data_files.rst  guide.rst  index.rst
cortical_flatmaps/ccf_streamlines-main/docs/source/reference/: angle.rst  coordinates.rst  dataset.rst  index.rst  linestring3d.rst  metrics.rst  morphology.rst  processing.rst  projection.rst
cortical_flatmaps/ccf_streamlines-main/tests/: test_coordinates.py
(+244 files in other folders)
