[metadata]
name = ccf_streamlines
version = attr: ccf_streamlines.__version__
description = Projection of Allen CCF data via streamlines
long_description = file: README.md
url = https://github.com/AllenInstitute/ccf_streamlines
classifiers =
    Programming Language :: Python :: 3

[options]
packages = ccf_streamlines
python_requires = >=3.9
install_requires =
    numpy
    scipy
    pynrrd
    h5py>=2.10
    scikit-image
    pandas
    tqdm
